# genetico

./: .gitignore  CMakeLists.txt  README.md  algoritmo_genetico.cpp  algoritmo_genetico.h  genetico.cpp  imgui.ini  main.cpp  tsp_ga.cpp  tsp_ga.h
